Fix LibertumEcosystem spacing

--- a/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
+++ b/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: 75.125rem;
   margin: 2rem auto;
-  gap: auto;
+  gap: 4rem;
 }
 
 .title {
@@ -13,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 }
 
 .title section {
@@ -40,7 +41,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 24px */
-  margin-bottom: 2rem;
 }
 
 .applyButton {
@@ -84,13 +84,12 @@
   height: auto;
 }
 
-
-@media screen and (max-width:1100px){
-  .ecosystemGraph{
+@media screen and (max-width: 1100px) {
+  .ecosystemGraph {
     display: none;
   }
 
-  .title section{
+  .title section {
     flex-direction: column;
   }
 }
